Update script.sh