@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-#Supporter pour la version 1.15.2 de minecraft, Snapshot 20w09A et prise ne charge de forge 1.12.2 et 1.15.2
+#Supporter pour la version 1.15.2 de minecraft, Snapshot 20w1A et prise ne charge de forge 1.12.2 et 1.15.2
 clear
 
 echo "Chargement..."
@@ -19,6 +19,28 @@ apt install zip -y
 apt install default-jre -y
 apt install openjdk-8-jre-headless -y
 apt install default-jdk -y
+
+clear
+
+echo "Ajoue des depot Java 8..."
+sudo apt install apt-transport-https ca-certificates wget dirmngr gnupg software-properties-common -y
+wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
+sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/
+sudo apt update
+clear
+echo "Téléchargement de Java 8..."
+sudo apt install adoptopenjdk-8-hotspot -y
+clear
+echo "Modification patsh Java 11"
+java -version
+clear
+echo "Merci de Taper : 1 puis entrer"
+sudo update-alternatives --config java
+rm -f /et/environment
+touch environment && echo "/usr/lib/jvm/adoptopenjdk-8-hotspot-amd64/bin/java" >> environment
+source /etc/environment
+echo $JAVA_HOME
+sleep 1
 clear
 
 echo "Que voulez-vous installer ou mettre à jour ?\n"
@@ -31,8 +53,10 @@ echo "6 - Forge 1.15.2\n"
 echo "7 - Forge 1.12.2\n"
 echo "8 - Sponge\n"
 echo "9 - CatServer\n"
-echo "10 - Info Système\n"
-echo "11 - Quitter\n"
+echo "10 - Thermos\n"
+echo "11 - Débogage\n"
+echo "12 - Info Système\n"
+echo "13 - Quitter\n"
 echo "Taper le nombre qui correspond à ce que vous voulez installer et appuyer sur entrer."
 read installation
 case $installation in
@@ -47,7 +71,7 @@ rm -f vanilla-backup.zip
 zip -r vanilla-backup.zip vanilla/
 mkdir vanilla
 chmod 777 vanilla/
-chmod 777 vanilla/*
+chmod 777 -R vanilla/
 cd vanilla
 rm -f server.jar
 rm -f start.sh
@@ -58,6 +82,9 @@ touch eula.txt && echo "eula=true" >> eula.txt
 touch start.sh && echo "screen -d -m -S vanilla java -Xmx1024M -Xms1024M -jar server.jar nogui" >> start.sh
 chmod 777 start.sh
 chmod 777 server.jar
+cd /home
+chmod 777 -R vanilla/
+clear
 echo "Terminer !\n"
 echo "Pour démarrer votre serveur faites la commande : cd /home/vanilla && sh start.sh"
 echo "Pour accéder à votre console taper la commande : screen -r vanilla"
@@ -78,17 +105,20 @@ rm -f snapshot-backup.zip
 zip -r snapshot-backup.zip snapshot/
 mkdir snapshot
 chmod 777 snapshot/
-chmod 777 snapshot/*
+chmod 777 -R snapshot/
 cd snapshot
 rm -f server.jar
 rm -f start.sh
 rm -f eula.txt
 echo "Téléchargement du serveur"
-wget https://launcher.mojang.com/v1/objects/b9310c21839112d6758b0b245998f57a2b9a0500/server.jar
+wget https://launcher.mojang.com/v1/objects/0c80ec15d36440cdeaffe1a0791fed78faea62ce/server.jar
 touch eula.txt && echo "eula=true" >> eula.txt
 touch start.sh && echo "screen -d -m -S snapshot java -Xmx1024M -Xms1024M -jar server.jar nogui" >> start.sh
 chmod 777 start.sh
 chmod 777 server.jar
+cd /home
+chmod 777 -R snapshot/
+clear
 echo "Terminer !\n"
 echo "Pour démarrer votre serveur faites la commande : cd /home/snapshot && sh start.sh"
 echo "Pour accéder à votre console taper la commande : screen -r snapshot"
@@ -109,7 +139,7 @@ rm -f spigot-backup.zip
 zip -r spigot-backup.zip spigot/
 mkdir spigot
 chmod 777 spigot/
-chmod 777 spigot/*
+chmod 777 -R spigot/
 cd spigot
 rm -f spigot.jar
 rm -f start.sh
@@ -129,6 +159,8 @@ chmod 777 start.sh
 chmod 777 spigot.jar
 echo "Nettoyage..."
 rm -R buildtools
+cd /home
+chmod 777 -R spigot/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/spigot && sh start.sh"
@@ -150,7 +182,7 @@ rm -f bukkit-backup.zip
 zip -r bukkit-backup.zip bukkit/
 mkdir bukkit
 chmod 777 bukkit/
-chmod 777 bukkit/*
+chmod 777 -R bukkit/
 cd bukkit
 rm -f craftbukkit.jar
 rm -f start.sh
@@ -170,6 +202,8 @@ chmod 777 start.sh
 chmod 777 craftbukkit.jar
 echo "Nettoyage..."
 rm -R buildtools
+cd /home
+chmod 777 -R bukkit/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/bukkit && sh start.sh"
@@ -191,7 +225,7 @@ rm -f paperspigot-backup.zip
 zip -r paperspigot-backup.zip paperspigot/
 mkdir paperspigot
 chmod 777 paperspigot/
-chmod 777 paperspigot/*
+chmod 777 -R paperspigot/
 cd paperspigot
 rm -f paperclip.jar
 rm -f start.sh
@@ -202,6 +236,8 @@ touch eula.txt && echo "eula=true" >> eula.txt
 touch start.sh && echo "screen -d -m -S paperspigot java -Xms3G -Xmx3G -XX:+UseConcMarkSweepGC -jar paperclip.jar nogui" >> start.sh
 chmod 777 start.sh
 chmod 777 paperclip.jar
+cd /home
+chmod 777 -R paperspigot/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/paperspigot && sh start.sh"
@@ -223,7 +259,7 @@ rm -f forge-1.15.2-backup.zip
 zip -r forge-1.15.2-backup.zip forge-1.15.2/
 mkdir forge-1.15.2
 chmod 777 forge-1.15.2/
-chmod 777 forge-1.15.2/*
+chmod 777 -R forge-1.15.2/
 cd forge-1.15.2
 rm -f forge-*.jar
 rm -f forge.jar
@@ -232,7 +268,7 @@ rm -f eula.txt
 rm -R libraries
 mkdir mods
 chmod 777 mods/
-chmod 777 mods/*
+chmod 777 -R mods/
 echo "Téléchargement de forge"
 wget https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.15.2-31.1.18/forge-1.15.2-31.1.18-installer.jar
 mv forge-*-installer.jar forge-installer.jar
@@ -248,6 +284,8 @@ echo "Nettoyage..."
 rm -f forge-installer.jar
 rm -f forge-*-installer.jar.log
 rm -f forge-installer.jar.log
+cd /home
+chmod 777 -R forge-1.15.2/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/forge-1.15.2 && sh start.sh"
@@ -269,7 +307,7 @@ rm -f forge-1.12.2-backup.zip
 zip -r forge-1.12.2-backup.zip forge-1.12.2/
 mkdir forge-1.12.2
 chmod 777 forge-1.12.2/
-chmod 777 forge-1.12.2/*
+chmod 777 -R forge-1.12.2/
 cd forge-1.12.2
 rm -f start.sh
 rm -f eula.txt
@@ -278,7 +316,7 @@ rm -f forge-*.jar
 rm -R libraries
 mkdir mods
 chmod 777 mods/
-chmod 777 mods/*
+chmod 777 -R mods/
 echo "Téléchargement de forge"
 wget https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.12.2-14.23.5.2847/forge-1.12.2-14.23.5.2847-installer.jar
 clear
@@ -294,6 +332,8 @@ echo "Nettoyage..."
 rm -r forge-installer.jar
 rm -f forge-*-installer.jar.log
 rm -f forge-installer.jar.log
+cd /home
+chmod 777 -R forge-1.12.2/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/forge-1.12.2 && sh start.sh"
@@ -315,7 +355,7 @@ rm -f sponge-backup.zip
 zip -r sponge-backup.zip sponge/
 mkdir sponge
 chmod 777 sponge/
-chmod 777 sponge/*
+chmod 777 -R sponge/
 cd sponge
 rm -f start.sh
 rm -f eula.txt
@@ -341,7 +381,7 @@ rm -f forge-installer.jar.log
 echo "Instalation de sponge..."
 mkdir mods
 chmod 777 mods/
-chmod 777 mods/*
+chmod 777 -R mods/
 cd mods
 rm -f spongeforge-*.jar
 wget https://repo.spongepowered.org/maven/org/spongepowered/spongeforge/1.12.2-2838-7.1.9/spongeforge-1.12.2-2838-7.1.9.jar
@@ -349,7 +389,9 @@ mv spongeforge-*.jar sponge.jar
 chmod 777 sponge.jar
 mkdir plugins
 chmod 777 plugins/
-chmod 777 plugins/*
+chmod 777 -R plugins/
+cd /home
+chmod 777 -R sponge/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/sponge && sh start.sh"
@@ -365,6 +407,7 @@ echo "Fichier de démarrage de : start.sh"
 9)
 # CatServer
 clear
+echo "Instalation de : CatServer"
 cd /home
 echo "Une sauvegarde va être crée dans /home si un serveur et déjà installer et les autres sauvegardes écrasées s’il en existe ctrl + c pour annuler"
 sleep 4
@@ -372,7 +415,7 @@ rm -f CatServer-backup.zip
 zip -r catserver-backup.zip catserver/
 mkdir catserver
 chmod 777 catserver/
-chmod 777 catserver/*
+chmod 777 -R catserver/
 cd catserver
 rm -f start.sh
 rm -f eula.txt
@@ -383,12 +426,14 @@ wget https://github.com/Luohuayu/CatServer/releases/download/20.02.28/CatServer-
 mv CatServer-*-universal.jar CatServer.jar
 chmod 777 CatServer.jar
 clear
-echo "Installation de catserver"
+echo "Installation de catserver..."
 touch eula.txt && echo "eula=true" >> eula.txt
 touch start.sh && echo "screen -d -m -S catserver java -jar CatServer.jar nogui" >> start.sh
 chmod 777 start.sh
 mkdir plugins
 mkdir mods
+cd /home
+chmod 777 -R catserver/
 clear
 echo "Terminer !\n"
 echo "Pour démarer votre serveur faites la commande : cd /home/catserver && sh start.sh"
@@ -401,17 +446,143 @@ echo "Dossier des mods : /home/catserver/mods"
 echo "Dossier des plugins : /home/catserver/plugins"
 echo "Fichier de démarrage de : start.sh"
 ;;
+# Thermos
 10)
+clear
+echo "Instalation de : Thermos"
+cd /home
+echo "Une sauvegarde va être crée dans /home si un serveur et déjà installer et les autres sauvegardes écrasées s’il en existe ctrl + c pour annuler"
+sleep 4
+rm -f thermos.zip
+zip -r thermos.zip thermos/
+mkdir thermos
+chmod 777 thermos/
+chmod 777 -R thermos/
+cd thermos
+rm -f start.sh
+rm -f eula.txt
+rm -f Thermos-1.7.10-1614-server.jar
+clear
+echo "Installation de Thermos..."
+wget https://github.com/CyberdyneCC/Thermos/releases/download/58/Thermos-1.7.10-1614-server.jar
+wget https://github.com/CyberdyneCC/Thermos/releases/download/58/libraries.zip
+mv Thermos-1.7-*-server.jar Thermos.jar
+unzip libraries.zip
+rm -f libraries.zip
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S thermos java -jar Thermos.jar nogui" >> start.sh
+mkdir plugins
+mkdir mods
+cd /home
+chmod 777 -R thermos/
+clear
+echo "Terminer !\n"
+echo "Pour démarer votre serveur faites la commande : cd /home/thermos && sh start.sh"
+echo "Pour accéder à votre console taper la commande : screen -r thermos"
+echo "Detail de l'installation"
+echo "Version du serveur : 1.7.10"
+echo "API : SpigotAPI, Forge"
+echo "Dossier d'instalation : /home/thermos"
+echo "Dossier des mods : /home/thermos/mods"
+echo "Dossier des plugins : /home/thermos/plugins"
+echo "Fichier de démarrage de : start.sh"
+;;
+# Débogage
+11)
+clear
+echo "Démarage du Débogage..."
+sleep 1
+echo "Vérification des fichier de démarages..."
+cd /home/vanilla
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S vanilla java -Xmx1024M -Xms1024M -jar server.jar nogui" >> start.sh
+cd /home/snapshot
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S snapshot java -Xmx1024M -Xms1024M -jar server.jar nogui" >> start.sh
+cd /home/spigot
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S spigot java -Xms3G -Xmx3G -XX:+UseConcMarkSweepGC -jar spigot.jar nogui" >> start.sh
+cd /home/bukkit
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S bukkit java -Xms3G -Xmx3G -XX:+UseConcMarkSweepGC -jar craftbukkit.jar nogui" >> start.sh
+cd /home/paperspigot
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S paperspigot java -Xms3G -Xmx3G -XX:+UseConcMarkSweepGC -jar paperclip.jar nogui" >> start.sh
+cd /home/forge-1.15.2
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S forge-1.15.2 java -jar forge.jar nogui" >> start.sh
+cd /home/forge-1.12.2
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S forge-1.12.2 java -jar forge.jar nogui" >> start.sh
+cd /home/sponge
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S sponge java -jar forge.jar nogui" >> start.sh
+cd /home/catserver
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S catserver java -jar CatServer.jar nogui" >> start.sh
+cd /home/thermos
+rm -f eula.txt
+rm -f start.sh
+touch eula.txt && echo "eula=true" >> eula.txt
+touch start.sh && echo "screen -d -m -S thermos java -jar Thermos.jar nogui" >> start.sh
+clear
+echo "Vérification des permissions..."
+sleep 1
+cd /home
+chmod 777 vanilla
+chmod 777 -R vanilla/
+chmod 777 snapshot/
+chmod 777 -R snapshot/
+chmod 777 spigot/
+chmod 777 -R spigot/
+chmod 777 bukkit/
+chmod 777 -R bukkit/
+chmod 777 paperspigot/
+chmod 777 -R paperspigot/
+chmod 777 forge-1.15.2/
+chmod 777 -R forge-1.15.2/
+chmod 777 forge-12.2/
+chmod 777 -R forge-1.12.2/
+chmod 777 sponge/
+chmod 777 -R sponge/
+chmod 777 catserver
+chmod 777 -R catserver/
+chmod 777 thermos
+chmod 777 -R thermos/
+clear
+echo "Débogage terminer !"
+echo "Si votre Problème n'est pas résolue aller voire"
+echo "https://github.com/zendrique/mc-script/issues"
+echo "Pour obtenir de l'aide"
+;;
+12)
 # Info systéme
 clear
 echo "Votre Système :"
 uname -a
-echo "version du script : 0.1\n"
 echo "contributeur : zendrique"
 echo "Se script est concue pour fonctionner avec les systémes d'exploitation utilisant comment gestionnaire de packet apt"
 echo "nous recommendons d'utiliser debian ou ubuntu."
 ;;
-11)
+13)
 # Quiter
 echo "Suppression du script..."
 cd /home
@@ -419,6 +590,9 @@ rm -f script.sh
 echo "Script par zendrique https://github.com/zendrique"
 echo "Fermture..."
 break
+;;
+404)
+echo "404 Not found."
 ;;
 *) echo "Saisie non valide"
 ;;
